--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,5 +1,8 @@
 {
   "name": "client",
   "version": "1.0.0",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "echo \"done\""
+  }
 }
