--- a/packages/client/netlify.toml
+++ b/packages/client/netlify.toml
@@ -3,22 +3,24 @@
 #
 
 [build]
-base = "packages/client"
-publish = "build/"
-command = "yarn build"
+    base = "packages/client"
+    publish = "build/"
+    command = "yarn build"
 
 [[redirects]]
-from = "/api/*"
-to = "https://app-my-home.herokuapp.com/:splat"
-status = 200
+    from = "/api/*"
+    to = "https://app-my-home.herokuapp.com/:splat"
+    status = 200
 
 [[redirects]]
-from = "/*"
-to = "/index.html"
-status = 200
+    from = "/*"
+    to = "/index.html"
+    status = 200
 
-[template.environment]
-DISABLE_ESLINT_PLUGIN = "true"
-NETLIFY_USE_YARN = "true"
-REACT_APP_API_URL = "set the url to your API"
-REACT_APP_PUSH_NOTIFICATION_PUBLIC_VAPID_KEY = "set the genereted public VAPID key for web push notification"
+[template]
+
+    [template.environment]
+        DISABLE_ESLINT_PLUGIN = "true"
+        NETLIFY_USE_YARN = "true"
+        REACT_APP_API_URL = "set the url to your API"
+        REACT_APP_PUSH_NOTIFICATION_PUBLIC_VAPID_KEY = "set the genereted public VAPID key for web push notification"
