--- a/netlify.toml
+++ b/netlify.toml
@@ -6,5 +6,5 @@
     base = "packages/client"
 
 [template.environment]
-    REACT_APP_API_URL = "Set the URL to your API/server deployed on Heroku"
+    REACT_APP_API_URL = "Set the URL to your API deployed on Heroku"
     REACT_APP_PUSH_NOTIFICATION_PUBLIC_VAPID_KEY = "Set the public VAPID key for push notifications"
