--- a/netlify.toml
+++ b/netlify.toml
@@ -7,4 +7,4 @@
 
 [template.environment]
     REACT_APP_API_URL = "Set the URL to your API deployed on Heroku"
-    REACT_APP_PUSH_NOTIFICATION_PUBLIC_VAPID_KEY = "Set the public VAPID key for push notifications"
+    REACT_APP_PUSH_NOTIFICATION_PUBLIC_VAPID_KEY = "Set your public VAPID key for push notifications"
